--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Mi primera pagina web HTMLLLLLL</title>
 </head>
 <body>
-<h1 align="center" >Mi Primera pagina web </h1>
+<h1 align="center" >Mi Primera pagina web HTMLLLLLL</h1>
 <hr>
 <p>Esto tan sencillo es una verdadera página web, aunque le falta el contenido, 
 pero todo llegará.</p>
