Actualizo nuevo Link

--- a/maczy00.html
+++ b/maczy00.html
@@ -6,7 +6,7 @@
 <p>Bienvenido</p>
 <p>
    Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si te interesa conocer más, puedes consultar mi curriculum aquí. 
-   <a href="https://maczy00.github.io/CV_Blasco/CV.pdf" target="_blank"> curriculum vitae</a>
+   <a href="https://maczy00.github.io/CV.pdf" target="_blank"> curriculum vitae</a>
 </p>
 <p>
    Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente.<br /><br /><br /> También si así lo deseas, puedes chequear mis cursos en mi perfil de LinkedIn aquí:
