--- a/maczy00.html
+++ b/maczy00.html
@@ -2,7 +2,7 @@
 ><span id="c">$</span> cd maczy00/acerca_de
 <span id="a">maczy00@ubuntu</span>:<span id="b">~</span
 ><span id="c">$</span> cat Blasco.txt<br /><br />
-"<span id="k">Hola, que bueno verte aquí!.</span>" Este soy yo, maczy00 o por mi nombre real, Maximiliano.
+"<span id="k">Hola, que bueno verte aquí!.</span>" Este soy yo, <span id="b">maczy00</span> o por mi nombre real, Maximiliano.
 <p>Bienvenido</p>
 <p>
    Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si te interesa conocer más, puedes consultar mi curriculum aquí. 
