--- a/maczy00.html
+++ b/maczy00.html
@@ -13,5 +13,5 @@
    <a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>.   
 </p>
 <p>También te dejo el link a mi cuenta de <a href="https://github.com/maczy00" target="_blank"> GitHub</a> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
-Finalmente si desea contactarme, puede hacerlo mediante un correo electrónico, no dude en enviarme un mail a "blascomaxi@gmail.com".
+Finalmente si desea contactarme, puede hacerlo mediante un correo electrónico, no dude en enviarme un mail a <span id="b">"blascomaxi@gmail.com"</span>.
 <p>Saludos!</p>
