--- a/maczy00.html
+++ b/maczy00.html
@@ -1,17 +1,17 @@
-<span id="a">maczy00@ubuntu</span>:<span id="b">~</span
-><span id="c">$</span> cd maczy00/acerca_de
-<span id="a">maczy00@ubuntu</span>:<span id="b">~</span
+<span id="a">maximilianobl@ubuntu</span>:<span id="b">~</span
+><span id="c">$</span> cd maximilianobl/acerca_de
+<span id="a">maximilianobl@ubuntu</span>:<span id="b">~</span
 ><span id="c">$</span> cat Blasco.txt<br /><br />
-"<span id="k">Hola, que bueno verte aquí!.</span>" Este soy yo, <span id="b">maczy00</span> o por mi nombre real, Maximiliano.
+"<span id="k">Hola, que bueno verte aquí!.</span>" Yo soy, <span id="b">maximilianobl</span> o si prefieres saber mi nombre real, él es Maximiliano.
 <p>Bienvenido</p>
 <p>
    Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si te interesa conocer más, puedes consultar mi curriculum aquí. 
-   <a href="https://maczy00.github.io/CV.pdf" target="_blank"> curriculum vitae</a>
+   <a href="https://maximilianobl.github.io/CV.pdf" target="_blank"> curriculum vitae</a>
 </p>
 <p>
    Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente.<br /><br /><br /> También si así lo deseas, puedes chequear mis cursos en mi perfil de LinkedIn aquí:
    <a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>.   
 </p>
-<p>También te dejo el link a mi cuenta de <a href="https://github.com/maczy00" target="_blank"> GitHub</a> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
+<p>También te dejo el link a mi cuenta de <a href="https://github.com/maximilianobl" target="_blank"> GitHub</a> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
 Finalmente si desea contactarme, puede hacerlo mediante un correo electrónico, no dude en enviarme un mail a <span id="b">"blascomaxi@gmail.com"</span>.
 <p>Saludos!</p>
