--- a/maczy00.html
+++ b/maczy00.html
@@ -9,7 +9,7 @@
    <a href="https://maximilianobl.github.io/CV.pdf" target="_blank"> curriculum vitae</a>
 </p>
 <p>
-   Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy descubriendo nuevas herramientas y tecnologías para aplicarlas a mi día a día.<br /><br /><br /> Puedes echarle un vistazo a mis badges: <a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a> o simplemente visita mi perfil en: <a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>.   
+   Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy descubriendo nuevas herramientas y tecnologías para aplicarlas a mi día a día.<br /><br /><br /> Puedes echarle un vistazo a mis badges <a href="https://www.credly.com/users/maczy/badges" target="_blank"><<Certificados>></a> o simplemente visita mi perfil en <a href="https://www.linkedin.com/in/maczy/" target="_blank"><<LinkedIn>></a>.   
 </p>
 <p>También te dejo el link a mi cuenta de <a href="https://github.com/maximilianobl" target="_blank"> GitHub</a> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
 Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: <span id="b">"blascomaxi@gmail.com"</span>.
