--- a/maczy00.html
+++ b/maczy00.html
@@ -3,7 +3,7 @@
 <span id="a">maxibl@ubuntu</span>:<span id="b">~</span
 ><span id="c">$</span> cat Blasco.txt<br /><br />
 "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
-<p>Bienvenido</p>
+Bienvenido
 <p>
    Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 8 años me desempeño en el área de IT. Si te interesa conocer más acerca de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.
 </p>
