--- a/maczy00.html
+++ b/maczy00.html
@@ -4,11 +4,8 @@
 ><span id="c">$</span> cat Blasco.txt<br /><br />
 "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
 <p>Bienvenido</br>
-Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 8 años me desempeño en el área de IT. Si te interesa conocer más acerca de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.
-</p>
-<p>
-   Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy descubriendo nuevas herramientas y tecnologías para aplicarlas a mi día a día.<br /><br /><br /> Puedes echarle un vistazo a mis badges <<<a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a>>> o simplemente visita mi perfil en <<<a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>>>.   
-</p>
-<p>También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
-Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: <span id="b">"blascomaxi@gmail.com"</span>.
-<p>Saludos!</p>
+Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 8 años me desempeño en el área de IT. Si te interesa conocer más acerca de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.</br>
+Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy descubriendo nuevas herramientas y tecnologías para aplicarlas a mi día a día.<br /><br /><br /> Puedes echarle un vistazo a mis badges <<<a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a>>> o simplemente visita mi perfil en <<<a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>>>.</br>
+También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
+Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: <span id="b">"blascomaxi@gmail.com"</span>.</br>
+Saludos!</p>
