--- a/maczy00.html
+++ b/maczy00.html
@@ -9,3 +9,5 @@ Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccion
 También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
 Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: <span id="b">"blascomaxi@gmail.com"</span>.</br>
 Saludos!</p>
+<span id="a">maxibl@ubuntu</span>:<span id="b">~</span
+><span id="c">$</span>
