--- a/maczy00.html
+++ b/maczy00.html
@@ -4,9 +4,10 @@
 ><span id="c">$</span> cat Blasco.txt<br /><br />
 "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
 <p>Bienvenido</br>
-Soy graduado en la Universidad Nacional del Nordeste con el titulo de grado en Licenciatura en sistemas de información y desde hace mas de 8 años me desempeño en el área de IT. Si te interesa conocer más acerca de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.</br>
-Mis tiempos libres normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy descubriendo nuevas herramientas y tecnologías para aplicarlas a mi día a día.<br /><br /><br /> Puedes echarle un vistazo a mis badges <<<a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a>>> o simplemente visita mi perfil en <<<a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>>>.</br>
-También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br /></p>
+Soy graduado en la Universidad Nacional del Nordeste con el título de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si quieres saber mas de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.</br>
+Mi tiempo libre normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy aprendiendo nuevas herramientas y tecnologías para aplicarlas en mi día a día.<br/>
+Puedes echarle un vistazo a mis badges <<<a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a>>> o simplemente visitá mi perfil en <<<a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>>>.</br>
+También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br />
 Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: <span id="b">"blascomaxi@gmail.com"</span>.</br>
 Saludos!</p>
 <span id="a">maxibl@ubuntu</span>:<span id="b">~</span
