--- a/maczy00.html
+++ b/maczy00.html
@@ -1,7 +1,7 @@
 <span id="a">maxibl@ubuntu</span>:<span id="b">~</span
-><span id="c">$</span> cd perfil/visualizar
+><span id="c">$</span> cd home/perfil
 <span id="a">maxibl@ubuntu</span>:<span id="b">~</span
-><span id="c">$</span> cat Blasco.txt<br /><br />
+><span id="c">/perfil$</span> cat Blasco.txt<br /><br />
 "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
 <p>Bienvenido</br>
 Soy graduado en la Universidad Nacional del Nordeste con el título de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si quieres saber mas de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.</br>
