--- a/maczy00.html
+++ b/maczy00.html
@@ -1,5 +1,5 @@
-<span id="a">maxibl@ubuntu</span>:<span id="b">~</span
-><span id="c">$</span> cd home/perfil
+<span id="a">maxibl@ubuntu</span>:<span id="b">~</span>
+<span id="c">$</span> cd home/perfil
 <span id="a">maxibl@ubuntu</span>:<span id="b">~</span
 ><span id="c">/perfil$</span> cat Blasco.txt<br /><br />
 "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
