--- a/maczy00.html
+++ b/maczy00.html
@@ -1,4 +1,4 @@
-<span id="a">maxibl@ubuntu</span>:<span id="b">~</span>
+<span id="a">maxibl@ubuntu</span>:<span id="b">~</span
 <span id="c">$</span> cd home/perfil
 <span id="a">maxibl@ubuntu</span>:<span id="b">~</span
 ><span id="c">/perfil$</span> cat Blasco.txt<br /><br />
