--- a/maczy00.html
+++ b/maczy00.html
@@ -4,7 +4,7 @@
 <span id="c">/perfil$</span> cat Blasco.txt<br /><br />
 "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
 <p>Bienvenido</br>
-Soy graduado en la Universidad Nacional del Nordeste con el título de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si quieres saber mas de mí, puedes consultar mi curriculum aquí <<<a href="https://maximilianobl.github.io/CV_Maximiliano_Blasco.pdf" target="_blank">curriculum vitae</a>>>.</br>
+Soy graduado en la Universidad Nacional del Nordeste con el título de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si quieres saber mas de mí, puedes consultar mi curriculum aquí <<<a href="#" target="_blank">curriculum vitae</a>>>.</br>
 Mi tiempo libre normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy aprendiendo nuevas herramientas y tecnologías para aplicarlas en mi día a día.<br/>
 Puedes echarle un vistazo a mis badges <<<a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a>>> o simplemente visitá mi perfil en <<<a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>>>.</br>
 También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br />
