--- a/maczy00.html
+++ b/maczy00.html
@@ -1,14 +1,13 @@
-<span id="a">maxibl@ubuntu</span>:<span id="b">~</span
-<span id="c">$</span> cd home/perfil/
-<span id="a">maxibl@ubuntu</span>:<span id="b">~</span
-<span id="c">/perfil$</span> cat Blasco.txt<br /><br />
-"<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
-<p>Bienvenido</br>
-Soy graduado en la Universidad Nacional del Nordeste con el título de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si quieres saber mas de mí, puedes consultar mi curriculum aquí <<<a href="">curriculum vitae</a>>>.</br>
-Mi tiempo libre normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy aprendiendo nuevas herramientas y tecnologías para aplicarlas en mi día a día.<br/>
-Puedes echarle un vistazo a mis badges <<<a href="https://www.credly.com/users/maczy/badges" target="_blank">Certificados</a>>> o simplemente visitá mi perfil en <<<a href="https://www.linkedin.com/in/maczy/" target="_blank">LinkedIn</a>>>.</br>
-También te dejo el link a mi cuenta de <<<a href="https://github.com/maximilianobl" target="_blank">GitHub</a>>> por si quieres visualizar algunos de mis pasatiempos.<br />
-Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: <span id="b">"blascomaxi@gmail.com"</span>.</br>
-Saludos!</p>
-<span id="a">maxibl@ubuntu</span>:<span id="b">~</span
-<span id="c">/perfil$</span>
+<pre>
+    <span id="a">maxibl@ubuntu</span>:<span id="b">~</span><span id="c">$</span> cd home/perfil/
+    <span id="a">maxibl@ubuntu</span>:<span id="b">~</span><span id="c">/perfil$</span> cat fgfdgffg.txt&lt;br /&gt;&lt;br /&gt;
+    "<span id="k">Hola, que bueno verte aquí!.</span>" Soy <span id="k">maxibl</span> o Maximiliano si prefieres llamarme por mi nombre real.
+    &lt;p&gt;Bienvenido&lt;br/&gt;
+    Soy graduado en la Universidad Nacional del Nordeste con el título de grado en Licenciatura en sistemas de información y desde hace mas de 10 años me desempeño en el área de IT. Si quieres saber mas de mí, puedes consultar mi curriculum aquí &lt;&lt;&lt;a href="#"&gt;curriculum vitae&lt;/a&gt;&gt;&gt;.&lt;/br&gt;
+    Mi tiempo libre normalmente lo utilizo para estudiar, investigar y perfeccionarme profesionalmente. Siempre estoy aprendiendo nuevas herramientas y tecnologías para aplicarlas en mi día a día.&lt;br/&gt;
+    Puedes echarle un vistazo a mis badges &lt;&lt;&lt;a href="#" target="_blank"&gt;Certificados&lt;/a&gt;&gt;&gt; o simplemente visitá mi perfil en &lt;&lt;&lt;a href="#" target="_blank"&gt;LinkedIn&lt;/a&gt;&gt;&gt;.&lt;/br&gt;
+    También te dejo el link a mi cuenta de &lt;&lt;&lt;a href="#" target="_blank"&gt;GitHub&lt;/a&gt;&gt;&gt; por si quieres visualizar algunos de mis pasatiempos.&lt;br /&gt;
+    Finalmente si deseas contactarme, podés hacerlo mediante un correo electrónico al e-mail: &lt;span id="b"&gt;"fdggdg@gmail.com"&lt;/span&gt;.&lt;/br&gt;
+    Saludos!&lt;/p&gt;
+    <span id="a">maxibl@ubuntu</span>:<span id="b">~</span><span id="c">/perfil$</span>
+    </pre>
